# swm-kit

./: README.md  pyproject.toml
swm/: cli.py  eval.py  record.py  train.py
swm_kit/: __init__.py  cli.py  eval.py  record.py  train.py  world.py
