[project]
name = "swm-kit"
version = "0.1.0"
description = "Ultraminimal helpers for stable-worldmodel"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "h5py",
    "typer",
    "stable-worldmodel",
]

[project.scripts]
swm = "swm.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
